Closed
Bug 1884778
Opened 1 year ago
Closed 1 year ago
Permanent /builds/worker/checkouts/gecko/gfx/thebes/gfxPlatformMac.cpp:123:46: error: allocating an object of abstract class type 'PlatformFontListClass' (aka 'IOSPlatformFontList')
Categories
(Core :: Graphics: Text, defect, P5)
Core
Graphics: Text
Tracking
()
RESOLVED
FIXED
125 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox123 | --- | unaffected |
firefox124 | --- | unaffected |
firefox125 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: glandium)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=450381289&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/PRGo5Z_kQiKCKk2q5O0UAw/runs/0/artifacts/public/logs/live_backing.log
gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/skia'
[task 2024-03-11T20:56:53.974Z] 20:56:53 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -isysroot /builds/worker/fetches/iPhoneOS17.4.sdk -mios-version-min=16.4 --target=aarch64-apple-ios -o Unified_cpp_gfx_skia20.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -fvisibility=hidden -fvisibility-inlines-hidden -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DMOZ_SKIA -DSKIA_IMPLEMENTATION=1 -DSK_PDF_USE_HARFBUZZ_SUBSETTING=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/gfx/skia -I/builds/worker/workspace/obj-build/gfx/skia -I/builds/worker/checkouts/gecko/gfx/skia/skia -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wduplicate-method-arg -Wduplicate-method-match -Wmissing-method-return-type -Wobjc-signed-char-bool -Wsemicolon-before-method-body -Wsuper-class-method-mismatch -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -Wno-deprecated-declarations -Wno-overloaded-virtual -Wno-sign-compare -Wno-unreachable-code -Wno-unused-function -Wno-implicit-fallthrough -Wno-inconsistent-missing-override -Wno-macro-redefined -Wno-unused-private-field -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_gfx_skia20.o.pp Unified_cpp_gfx_skia20.cpp
[task 2024-03-11T20:56:53.975Z] 20:56:53 INFO - In file included from Unified_cpp_gfx_skia20.cpp:2:
[task 2024-03-11T20:56:53.975Z] 20:56:53 INFO - In file included from /builds/worker/checkouts/gecko/gfx/skia/skia/src/sksl/codegen/SkSLRasterPipelineBuilder.cpp:18:
[task 2024-03-11T20:56:53.975Z] 20:56:53 INFO - In file included from /builds/worker/checkouts/gecko/gfx/skia/skia/src/sksl/tracing/SkRPDebugTrace.h:12:
[task 2024-03-11T20:56:53.976Z] 20:56:53 INFO - In file included from /builds/worker/checkouts/gecko/gfx/skia/skia/src/sksl/tracing/SkSLDebugInfo.h:11:
[task 2024-03-11T20:56:53.976Z] 20:56:53 WARNING - /builds/worker/checkouts/gecko/gfx/skia/skia/src/sksl/ir/SkSLType.h:425:5: warning: non-void function does not return a value in all control paths [-Wreturn-type]
[task 2024-03-11T20:56:53.976Z] 20:56:53 INFO - 425 | }
[task 2024-03-11T20:56:53.977Z] 20:56:53 INFO - | ^
[task 2024-03-11T20:56:53.977Z] 20:56:53 INFO - 1 warning generated.
[task 2024-03-11T20:56:53.978Z] 20:56:53 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/skia'
[task 2024-03-11T20:56:53.980Z] 20:56:53 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/skia'
[task 2024-03-11T20:56:53.981Z] 20:56:53 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/skia'
[task 2024-03-11T20:56:53.988Z] 20:56:53 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/skia'
[task 2024-03-11T20:56:53.989Z] 20:56:53 INFO - gfx/skia/Unified_cpp_gfx_skia9.o
[task 2024-03-11T20:56:53.989Z] 20:56:53 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/skia'
[task 2024-03-11T20:56:54.622Z] 20:56:54 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/thebes'
[task 2024-03-11T20:56:54.622Z] 20:56:54 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -isysroot /builds/worker/fetches/iPhoneOS17.4.sdk -mios-version-min=16.4 --target=aarch64-apple-ios -o gfxPlatformMac.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -fvisibility=hidden -fvisibility-inlines-hidden -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DGRAPHITE2_STATIC -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/gfx/thebes -I/builds/worker/workspace/obj-build/gfx/thebes -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/security/rlbox -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/media/platforms/apple -I/builds/worker/checkouts/gecko/dom/xml -I/builds/worker/checkouts/gecko/gfx/cairo/cairo/src -I/builds/worker/checkouts/gecko/third_party/xsimd/include -I/builds/worker/checkouts/gecko/widget/gtk -I/builds/worker/checkouts/gecko/gfx/skia -I/builds/worker/checkouts/gecko/gfx/skia/skia -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wduplicate-method-arg -Wduplicate-method-match -Wmissing-method-return-type -Wobjc-signed-char-bool -Wsemicolon-before-method-body -Wsuper-class-method-mismatch -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -Werror=switch -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/gfxPlatformMac.o.pp /builds/worker/checkouts/gecko/gfx/thebes/gfxPlatformMac.cpp
[task 2024-03-11T20:56:54.622Z] 20:56:54 INFO - In file included from /builds/worker/checkouts/gecko/gfx/thebes/gfxPlatformMac.cpp:56:
[task 2024-03-11T20:56:54.622Z] 20:56:54 WARNING - /builds/worker/checkouts/gecko/gfx/thebes/IOSPlatformFontList.h:13:7: warning: abstract class is marked 'final' [-Wabstract-final-class]
[task 2024-03-11T20:56:54.624Z] 20:56:54 INFO - 13 | class IOSPlatformFontList final : public CoreTextFontList {
[task 2024-03-11T20:56:54.625Z] 20:56:54 INFO - | ^
[task 2024-03-11T20:56:54.626Z] 20:56:54 INFO - /builds/worker/checkouts/gecko/gfx/thebes/gfxPlatformFontList.h:664:3: note: unimplemented pure virtual method 'GetFilteredPlatformFontLists' in 'IOSPlatformFontList'
[task 2024-03-11T20:56:54.627Z] 20:56:54 INFO - 664 | GetFilteredPlatformFontLists() = 0;
[task 2024-03-11T20:56:54.627Z] 20:56:54 INFO - | ^
[task 2024-03-11T20:56:54.628Z] 20:56:54 ERROR - /builds/worker/checkouts/gecko/gfx/thebes/gfxPlatformMac.cpp:123:46: error: allocating an object of abstract class type 'PlatformFontListClass' (aka 'IOSPlatformFontList')
[task 2024-03-11T20:56:54.629Z] 20:56:54 INFO - 123 | return gfxPlatformFontList::Initialize(new PlatformFontListClass);
[task 2024-03-11T20:56:54.630Z] 20:56:54 INFO - | ^
[task 2024-03-11T20:56:54.630Z] 20:56:54 INFO - 1 warning and 1 error generated.
[task 2024-03-11T20:56:54.630Z] 20:56:54 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:689: gfxPlatformMac.o] Error 1
[task 2024-03-11T20:56:54.630Z] 20:56:54 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/thebes'
[task 2024-03-11T20:56:54.630Z] 20:56:54 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/thebes'
[task 2024-03-11T20:56:54.630Z] 20:56:54 INFO - gfx/thebes/Unified_cpp_gfx_thebes0.o
[task 2024-03-11T20:56:54.630Z] 20:56:54 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/thebes'
[task 2024-03-11T20:56:55.014Z] 20:56:55 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/intl/l10n'
Updated•1 year ago
|
Flags: needinfo?(mh+mozilla)
Assignee | ||
Updated•1 year ago
|
Component: Task Configuration → Graphics: Text
Flags: needinfo?(mh+mozilla)
Keywords: regression
Product: Firefox Build System → Core
Regressed by: 1880561
Comment 1•1 year ago
|
||
Set release status flags based on info from the regressing bug 1880561
:tjr, since you are the author of the regressor, bug 1880561, could you take a look?
For more information, please visit BugBot documentation.
status-firefox123:
--- → unaffected
status-firefox124:
--- → unaffected
status-firefox125:
--- → affected
status-firefox-esr115:
--- → unaffected
Flags: needinfo?(tom)
Assignee | ||
Comment 2•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
![]() |
||
Updated•1 year ago
|
Summary: Intermittent /builds/worker/checkouts/gecko/gfx/thebes/gfxPlatformMac.cpp:123:46: error: allocating an object of abstract class type 'PlatformFontListClass' (aka 'IOSPlatformFontList') → Permanent /builds/worker/checkouts/gecko/gfx/thebes/gfxPlatformMac.cpp:123:46: error: allocating an object of abstract class type 'PlatformFontListClass' (aka 'IOSPlatformFontList')
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/173d4e9fcd46
Implement missing IOSPlatformFontList::GetFilteredPlatformFontLists. r=jfkthame
Comment 4•1 year ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Comment hidden (Intermittent Failures Robot) |
Updated•1 year ago
|
Flags: needinfo?(tom)
You need to log in
before you can comment on or make changes to this bug.
Description
•