Bug 1884778 - Implement missing IOSPlatformFontList::GetFilteredPlatformFontLists. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D204303